# projeto_F1

./: .env.example  README.md  SKILL.md  doc_api.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
docs/: index.md  tarefas.md
docs/api/: ingestao.md  modelos.md
docs/guia/: configuracao.md  executando.md  instalacao.md
src/projeto_f1/: __init__.py  config.py
src/projeto_f1/dashboard/: __init__.py  app.py  charts.py
src/projeto_f1/ingestion/: __init__.py  client.py  drivers.py  laps.py  sessions.py  stints.py
src/projeto_f1/models/: __init__.py  driver.py  lap.py  session.py  stint.py
src/projeto_f1/storage/: __init__.py  csv_writer.py
src/projeto_f1/transformation/: __init__.py  laps.py  sessions.py
src/projeto_f1/utils/: __init__.py  formatters.py
tests/: conftest.py
tests/unit/: test_charts.py  test_formatters.py  test_ingestion.py  test_stints.py  test_storage.py  test_transformation.py
