[tool.poetry]
name = "projeto-f1"
version = "0.1.0"
description = "Pipeline de dados de Fórmula 1 via OpenF1 API"
authors = ["Luis Fernando <cursos.lfam@gmail.com>"]
readme = "README.md"
packages = [{ include = "projeto_f1", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32"
pydantic = "^2.7"
pydantic-settings = "^2.3"
plotly = "^5.22"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.4"
taskipy = "^1.13"

[tool.poetry.group.dashboard.dependencies]
streamlit = "^1.35"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["projeto_f1"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=50"

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py", "*/dashboard/app.py"]

[tool.coverage.report]
show_missing = true

[tool.taskipy.tasks]
test        = { cmd = "pytest",                                                      help = "Executa todos os testes com cobertura" }
test-unit   = { cmd = "pytest tests/unit/ -v",                                       help = "Executa apenas os testes unitários" }
lint        = { cmd = "ruff check src/ tests/",                                      help = "Verifica problemas de qualidade de código" }
lint-fix    = { cmd = "ruff check --fix src/ tests/",                                help = "Corrige automaticamente problemas de lint" }
format      = { cmd = "ruff format src/ tests/",                                     help = "Formata o código-fonte" }
format-check = { cmd = "ruff format --check src/ tests/",                            help = "Verifica formatação sem alterar arquivos (útil em CI)" }
quality     = { cmd = "ruff check src/ tests/ && ruff format --check src/ tests/",  help = "Lint + verificação de formatação" }
dashboard   = { cmd = "streamlit run src/projeto_f1/dashboard/app.py",               help = "Inicia o dashboard interativo" }
ci          = { cmd = "poetry run task quality && poetry run task test",             help = "Pipeline completo de CI (quality + testes)" }
docs        = { cmd = "mkdocs serve",                                                help = "Inicia servidor local da documentação" }
docs-build  = { cmd = "mkdocs build",                                               help = "Gera a documentação estática em site/" }
